Fix spring-boot-loader's tests on Windows
Closes gh-17275